- Fixing height of graph on iPhone instead of using percentage, which always ends up being a percentage of something way larger than the screen size. - Made the viewcontrols and layoutcontrols desktoponly. - Added media query with mobile-specific stuff.

--- a/twoguys.css
+++ b/twoguys.css
@@ -47,7 +47,7 @@ section {
 }
 
 .textinfobox {
-  min-width: auto;
+  min-width: 200px;
   border: 1px dashed #ccc;
   border-radius: 8pt;
   min-height: 200px;
@@ -148,3 +148,16 @@ text {
 .qualitative {
   font-family: Georgia,"Book Antiqua",serif;
 }
+
+
+@media only screen and (max-width: 767px) {
+  .mainheader {   
+    font-size: 0.5em;
+    margin-top: 0.05em;
+  }
+
+  .desktoponly {
+    display: none;
+  }
+}
+ 
